# cpu-gpu-numerical-optim-bench

./: CMakeLists.txt  README.md
dense_im_registration/CPU/: CMakeLists.txt
dense_im_registration/CPU/src/: dense_im_reg_cpu.hpp  dense_im_reg_cpu.inl.hpp  dense_im_reg_cpu_bench.cpp
dense_im_registration/data/: dense_reg_im0_annot.txt  dense_reg_im1_annot.txt
include/: annot_info_handling.hpp  errCodes.h  im_processing_utils.hpp  image_pyr.hpp  optimization_utils.hpp
